fix: little indent failure

--- a/.gitconfig
+++ b/.gitconfig
@@ -15,18 +15,17 @@
 [alias]
   # Rewrite and add to default alias.
 	# To check them, command "git alias".
-        a = !git add . && git status
+  a = !git add . && git status
 	acm = !git add . && git commit -m
 	b = branch
 	bd = branch -d
-        ca = commit --amend
+  ca = commit --amend
 	cl = clone
-        cm = commit -m
+  cm = commit -m
 	co = checkout
 	cob = checkout -b
 	copo = !git checkout master && git pull origin master
-        d = dif
-        d = difff
+  d = diff
 	l = log --graph --date=short --decorate=short --pretty=format:'%C(auto)%h %C(auto, dim)%cd %C(auto, dim)%cn %C(auto)%s%C(auto)%d\n'
 	pl = pull
 	ps = push
