--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,68 +1,98 @@
 env:
   browser: true
-  es6: true
+  es2020: true
+  jest: true
+  node: true
 
 extends:
   - eslint:recommended
   - airbnb
+  - airbnb/hooks
   - plugin:import/errors
   - plugin:import/warnings
+  - plugin:import/typescript
+  - plugin:jest/recommended
   - plugin:jsx-a11y/recommended
-  - plugin:react/recommended
   - plugin:prettier/recommended
+  - plugin:react/recommended
+  - plugin:@typescript-eslint/recommended
   - prettier/react
+  - prettier/@typescript-eslint
 
 globals:
   Atomics: readonly
   SharedArrayBuffer: readonly
+  alert: readonly
+  console: readonly
+  document: readonly
+  $: readonly
 
-parser: babel-eslint
+parser: "@typescript-eslint/parser"
 
 parserOptions:
   ecmaFeatures:
     jsx: true
-  ecmaVersion: 2018
+  ecmaVersion: 2020
   sourceType: module
-  babelOptions:
-    configFile: "babel.config.js"
+  project: ./tsconfig.json
 
 plugins:
   - import
+  - jsx-a11y
   - react
+  - prettier
   - react-hooks
+  - "@typescript-eslint"
+
+settings:
+  import/resolver: webpack
 
 rules:
-  # Remove rules from default eslint configuration.
-  # e.g. indent, semi, quotes.
-  linebreak-style:
-    - error
-    - unix
-  
-  # Overwrite default and airbnb rules
-  no-console: off
-  no-alert: off
-  no-unused-expressions: off
-  no-param-reassign: off
+  prettier/prettier: error
   camelcase:
     - error
     - allow:
       - user_id
-      - showcase_id
-      - crystal_id
-
+  import/extensions:
+    - error
+    - tsx: ignorePackages
+      ts: ignorePackages
+      js: ignorePackages
+  import/no-unresolved: off
+  import/no-extraneous-dependencies:
+    - error
+    - peerDependencies: false
+      devDependencies:
+        - src/**/*.test.[tj]s?(x)
+        - src/**/*.stories.ts?(x)
+  import/prefer-default-export: off
   jsx-a11y/no-autofocus: off
   jsx-a11y/no-onchange: off
   jsx-a11y/media-has-caption: off
-
-  # Add import rules
-  import/no-unresolved: off
-  import/prefer-default-export: off
-
-  # Add react rules
+  linebreak-style:
+    - error
+    - unix
+  no-underscore-dangle:
+    - error
+    - allow:
+      - _exhaustion
+      - __REDUX_DEVTOOLS_EXTENSION_COMPOSE__
   react/forbid-prop-types: off
-  react/jsx-boolean-value: off
-  react/require-default-props: off
-
-  # Add react-hooks rules
+  react/jsx-filename-extension: 
+    - error
+    - extensions:
+      - .tsx
+      - .ts
+      - .js
+  react/jsx-props-no-spreading: off
+  react/prop-types: off
+  react-hooks/exhaustive-deps: warn
   react-hooks/rules-of-hooks: error
-  react-hooks/exhaustive-deps: off
+  "@typescript-eslint/no-unused-vars":
+    - error
+    - varsIgnorePattern: _exhaustion
+
+overrides:
+  - files: "*.js"
+    rules:
+      "@typescript-eslint/explicit-function-return-type": off
