--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -1,7 +1,7 @@
-printWidth: 110
-semi: false
-singleQuote: true
-jsxSingleQuote: true
 bracketSpacing: false
 jsxBracketSameLine: true
-arrowParens: always
+jsxSingleQuote: false
+parser: typescript
+printWidth: 110
+semi: false
+singleQuote: false
