--- a/settings.json
+++ b/settings.json
@@ -39,6 +39,11 @@
     "usePlaceholders": true, // 関数の引数や構造体のフィールドも補完対象
     "completeUnimported": true // パッケージ不使用時に import 文を削除
   },
+  /* HTML */
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true
+  },
   /* JavaScript */
   "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode", // formatter に Prettier を使用
@@ -59,7 +64,8 @@
   "ruby.rubocop.onSave": true, // 保存時に rubocop が実行される
   /* Markdown */
   "[markdown]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode" // formatter に Prettier を使用
+    "editor.defaultFormatter": "esbenp.prettier-vscode", // formatter に Prettier を使用
+    "editor.formatOnSave": true
   },
   "markdown.preview.fontFamily": "'Ricty Diminished', monospace", // Markdown プレビュー画面でのフォント
   "markdown.preview.fontSize": 11, // Markdown プレビュー画面でのフォントサイズ
@@ -75,9 +81,18 @@
   "swaggerViewer.defaultPort": 8080,
   /* Yaml */
   "[yaml]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true
   },
+  /* JSONC */
   "[jsonc]": {
-    "editor.defaultFormatter": "vscode.json-language-features"
+    "editor.defaultFormatter": "vscode.json-language-features",
+    "editor.formatOnSave": true
+  },
+  /* gRPC */
+  "clang-format.style": "file",
+  "[proto3]": {
+    "editor.defaultFormatter": "xaver.clang-format",
+    "editor.formatOnSave": true
   }
 }
