--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,7 @@
 	email = ev60596@meiji.ac.jp
 [core]
 	editor = vim -c \"set fenc= utf-8\"
+	excludesfile = /Users/s11639/.gitignore_global # PC 交換時に編集
 [color]
 	diff = auto
 	status = auto
@@ -12,6 +13,8 @@
 	diff = auto
 [push]
 	defaul = simple
+[url "ssh://git@github.com/"]
+	insteadOf = https://github.com/
 [alias]
   # Rewrite and add to default alias.
 	# To check them, command "git alias".
@@ -30,4 +33,5 @@
 	pl = pull
 	ps = push
 	pso = push origin
+	psou = push origin -u
 	ssb = status -sb
