--- a/.gitconfig
+++ b/.gitconfig
@@ -40,7 +40,7 @@
   d = diff
 	f = fetch
 	fr = !git fetch --all && git rebase origin/main
-	fork = !git pull origin main && !git push myorigin main && git fetch --all -p
+	fork = !git pull origin main && git push myorigin main && git fetch --all -p
 	l = log --graph --date=short --decorate=short --pretty=format:'%C(auto)%h %C(auto, dim)%cd %C(auto, dim)%cn %C(auto)%s%C(auto)%d\n'
 	pl = pull
 	ps = !git rev-parse --abbrev-ref HEAD | xargs -I@ git push origin @
@@ -52,6 +52,7 @@
 	r = rebase
 	ra = rebase --abort
 	rc = rebase --continue
+	ri = rebase -i
 	rlri = !git rev-list -1 --merges HEAD | xargs git rebase -i
 	rao = remote add origin
 	rom = rebase origin/main
