--- a/.starship.toml
+++ b/.starship.toml
@@ -23,6 +23,9 @@ renamed = "📝"
 deleted = "🗑"
 style = "bold purple"
 
+[buf]
+format = "[$symbol($version )]($style)"
+
 [golang]
 format = "[$symbol($version )]($style)"
 
