--- a/.golangci.yml
+++ b/.golangci.yml
@@ -11,6 +11,7 @@ skip-dirs:
 linters:
   enable:
     - gocritic
+    - gocognit
     - gofmt
     - goimports
     - gosec
@@ -18,6 +19,10 @@ linters:
     - nolintlint
     - misspell
     - prealloc
+
+linters-settings:
+  gocognit:
+    min-complexity: 20 # default is 30
 
 # デフォルトで OFF のルール
 # include で使う ID は下記を参照
