chore: update gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = krtsato
-	email = kuratasatoc@gmail.com
+	email = krtsatoc@gmail.com
 [core]
 	editor = vim -c \"set fenc= utf-8\"
 	excludesfile = ~/.gitignore_global
