--- a/.gitconfig
+++ b/.gitconfig
@@ -67,7 +67,7 @@
 	path = ~/.gitconfig.catools
 [includeIf "gitdir:~/engr/job/dokusho/"]
 	path = ~/.gitconfig.catools
-[includeIf "gitdir:~/go/src/github.com/GincoInc/"]
+[includeIf "gitdir:~/engr/job/GincoInc/"]
 	path = ~/.gitconfig.gnc
 [includeIf "gitdir:~/engr/job/red-frasco/"]
 	path = ~/.gitconfig.red
